--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
 	    <link href="assets/css/mystyle.css" rel="stylesheet"/>
 	    <script src="https://unpkg.com/feather-icons"></script>
 	    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	    <script>
+
+				window.fbAsyncInit = function() {
+				    FB.init({
+				      appId            : '395607541412475',
+				      autoLogAppEvents : true,
+				      xfbml            : true,
+				      version          : 'v8.0'
+				    });
+
+				    FB.CustomerChat.showDialog();
+				  };
+
+				(function(d, s, id) {
+				  var js, fjs = d.getElementsByTagName(s)[0];
+				  if (d.getElementById(id)) return;
+				  js = d.createElement(s); js.id = id;
+				  js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+				  fjs.parentNode.insertBefore(js, fjs);
+				}(document, 'script', 'facebook-jssdk'));
+			</script>
 </head>
 	</head>
 	<body>
@@ -75,26 +96,10 @@
 				</div>
 				<!-- Load Facebook SDK for JavaScript -->
       		<div id="fb-root"></div>
-      		<script>
-				window.fbAsyncInit = function() {
-				    FB.init({
-				      appId            : '395607541412475',
-				      autoLogAppEvents : true,
-				      xfbml            : true,
-				      version          : 'v8.0'
-				    });
-				  };
-
-				(function(d, s, id) {
-				  var js, fjs = d.getElementsByTagName(s)[0];
-				  if (d.getElementById(id)) return;
-				  js = d.createElement(s); js.id = id;
-				  js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
-				  fjs.parentNode.insertBefore(js, fjs);
-				}(document, 'script', 'facebook-jssdk'));
-			</script>
       			<!-- Your Chat Plugin code -->
-		      <div class="fb-customerchat" attribution=setup_tool page_id="107359324125283" 
+		      <div class="fb-customerchat" 
+		      	attribution=setup_tool 
+		      	page_id="107359324125283" 
 		      		theme_color="#13cf13"
 				  	logged_in_greeting="Hi! How can I help you?"
 				  	logged_out_greeting="Hi! How can I help you?">
@@ -129,10 +134,10 @@
 						      	</div>
 						      	<div class="card-footer">
 					        		<small class="text-muted">Technology used:</small>
-					        		<img src="images/codeigniter.svg" width="20" class="img-fluid" alt="...">
-					        		<img src="images/bootstrap.png" width="20" class="img-fluid" alt="...">
-					        		<img src="images/jquery.png" width="20" class="img-fluid" alt="...">
-					        		<img src="images/sql.png" width="20" class="img-fluid" alt="...">
+					        		<img src="images/codeigniter.svg" width="20" class="img-fluid" alt="Codeigniter image">
+					        		<img src="images/bootstrap.png" width="20" class="img-fluid" alt="bootstrap image">
+					        		<img src="images/jquery.png" width="20" class="img-fluid" alt="jquery image">
+					        		<img src="images/sql.png" width="20" class="img-fluid" alt="sql image">
 						      	</div>
 						    </div>
 					  	</div>
@@ -149,10 +154,10 @@
 							    </div>
 							    <div class="card-footer">
 							        <small class="text-muted">Technology used:</small>
-					        		<img src="images/codeigniter.svg" width="20" class="img-fluid" alt="...">
-					        		<img src="images/bootstrap.png" width="20" class="img-fluid" alt="...">
-					        		<img src="images/jquery.png" width="20" class="img-fluid" alt="...">
-					        		<img src="images/sql.png" width="20" class="img-fluid" alt="...">
+					        		<img src="images/codeigniter.svg" width="20" class="img-fluid" alt="codeigniter image">
+					        		<img src="images/bootstrap.png" width="20" class="img-fluid" alt="bootstrap image">
+					        		<img src="images/jquery.png" width="20" class="img-fluid" alt="jquery image">
+					        		<img src="images/sql.png" width="20" class="img-fluid" alt="sql image">
 							    </div>
 						    </div>
 						</div>
@@ -169,10 +174,10 @@
 				        		</div> 
 					      		<div class="card-footer">
 					        		<small class="text-muted">Technology used:</small>
-					        		<img src="images/php.png" width="20" class="img-fluid" alt="...">
-					        		<img src="images/bootstrap.png" width="20" class="img-fluid" alt="...">
-					        		<img src="images/jquery.png" width="20" class="img-fluid" alt="...">
-					        		<img src="images/sql.png" width="20" class="img-fluid" alt="...">
+					        		<img src="images/php.png" width="20" class="img-fluid" alt="php image">
+					        		<img src="images/bootstrap.png" width="20" class="img-fluid" alt="bootstrap image">
+					        		<img src="images/jquery.png" width="20" class="img-fluid" alt="jquery image">
+					        		<img src="images/sql.png" width="20" class="img-fluid" alt="sql image">
 					      		</div>
 					      	</div>
 					  	</div>
@@ -184,18 +189,18 @@
 	            <div class="container">
 	                <h3 class="text-center"><span>Tools</span> Used</h3>
 	                <div class="tools">
-	                	<img src="images/php.png" height="50" width="50"/>
-	                    <img src="images/codeigniter.svg" height="50" width="50"/>
-	                    <img src="images/js.png" height="50" width="50"/>
-	                    <img src="images/jquery.png" height="50" width="50"/>
-	                    <img src="images/wordpress.png" height="50" width="50"/>
+	                	<img src="images/php.png" height="50" width="50" alt="php image"/>
+	                    <img src="images/codeigniter.svg" height="50" width="50" alt="cogeigniter image" />
+	                    <img src="images/js.png" height="50" width="50" alt="javascript image" />
+	                    <img src="images/jquery.png" height="50" width="50" alt="jquery image" />
+	                    <img src="images/wordpress.png" height="50" width="50" alt="wordpress image" />
 	                </div>
 	                <div class="tools">
-	                    <img src="images/html.png" height="50" width="50"/>
-	                    <img src="images/css.png" height="50" width="50"/>
-	                    <img src="images/bootstrap.png" height="50" width="50"/>
-	                    <img src="images/sql.png" height="50" width="50"/>
-	                    <img src="images/git.png" height="50" width="50"/>
+	                    <img src="images/html.png" height="50" width="50" alt="html image" />
+	                    <img src="images/css.png" height="50" width="50" alt="css image" />
+	                    <img src="images/bootstrap.png" height="50" width="50" alt="bootstrap image" />
+	                    <img src="images/sql.png" height="50" width="50" alt="sql image" />
+	                    <img src="images/git.png" height="50" width="50" alt="git image" />
 	                </div>
 	                <p class="text-center mt-3">These are some tools that I used in my <strong style="color: #008D75;">web development career.</strong></p>
 	            </div>
@@ -253,7 +258,6 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
 		
 		<script src="assets/js/particle.js"></script>
-		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 		<script type="text/javascript">
 			particlesJS.load('particles', 'assets/particles.json', function() {
 					console.log('callback - particle.js config loaded');
