--- a/index.html
+++ b/index.html
@@ -14,30 +14,29 @@
 	    <link href="assets/css/mystyle.css" rel="stylesheet"/>
 	    <script src="https://unpkg.com/feather-icons"></script>
 	    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-	    <script>
-
-				window.fbAsyncInit = function() {
-				    FB.init({
-				      appId            : '395607541412475',
-				      autoLogAppEvents : true,
-				      xfbml            : true,
-				      version          : 'v8.0'
-				    });
-
-				    FB.CustomerChat.showDialog();
-				  };
-
-				(function(d, s, id) {
+</head>
+	</head>
+	<body>
+		<script>
+		  window.fbAsyncInit = function() {
+		    FB.init({
+		     appId            : '395607541412475',
+		      autoLogAppEvents : true,
+		      xfbml            : true,
+		      version          : 'v8.0'
+		    });
+		  };
+		  (function(d, s, id) {
 				  var js, fjs = d.getElementsByTagName(s)[0];
 				  if (d.getElementById(id)) return;
 				  js = d.createElement(s); js.id = id;
 				  js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
 				  fjs.parentNode.insertBefore(js, fjs);
 				}(document, 'script', 'facebook-jssdk'));
-			</script>
-</head>
-	</head>
-	<body>
+		</script>
+		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js"></script>
+    
+
 	    <div class="containter-fluid">
 	  		<header class="">
 		    	<nav class="navbar navbar-expand-lg">
