--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 		      xfbml            : true,
 		      version          : 'v8.0'
 		    });
+
+		    FB.CustomerChat.showDialog();
+		    
 		  };
 		  (function(d, s, id) {
 				  var js, fjs = d.getElementsByTagName(s)[0];
