--- a/index.html
+++ b/index.html
@@ -14,32 +14,10 @@
 	    <link href="assets/css/mystyle.css" rel="stylesheet"/>
 	    <script src="https://unpkg.com/feather-icons"></script>
 	    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js"></script>
 </head>
 	</head>
 	<body>
-		<script>
-		  window.fbAsyncInit = function() {
-		    FB.init({
-		     appId            : '395607541412475',
-		      autoLogAppEvents : true,
-		      xfbml            : true,
-		      version          : 'v8.0'
-		    });
-
-		    FB.CustomerChat.showDialog();
-		    
-		  };
-		  (function(d, s, id) {
-				  var js, fjs = d.getElementsByTagName(s)[0];
-				  if (d.getElementById(id)) return;
-				  js = d.createElement(s); js.id = id;
-				  js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
-				  fjs.parentNode.insertBefore(js, fjs);
-				}(document, 'script', 'facebook-jssdk'));
-		</script>
-		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js"></script>
-    
-
 	    <div class="containter-fluid">
 	  		<header class="">
 		    	<nav class="navbar navbar-expand-lg">
@@ -98,6 +76,28 @@
 				</div>
 				<!-- Load Facebook SDK for JavaScript -->
       		<div id="fb-root"></div>
+      		<script>
+				  window.fbAsyncInit = function() {
+				    FB.init({
+				     appId            : '395607541412475',
+				      autoLogAppEvents : true,
+				      xfbml            : true,
+				      version          : 'v8.0'
+				    });
+
+				    FB.CustomerChat.showDialog();
+				    FB.CustomerChat.show(shouldShowDialog: boolean);
+				  };
+				  FB.CustomerChat.showDialog();
+				   FB.CustomerChat.show(shouldShowDialog: boolean);
+				  (function(d, s, id) {
+						  var js, fjs = d.getElementsByTagName(s)[0];
+						  if (d.getElementById(id)) return;
+						  js = d.createElement(s); js.id = id;
+						  js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+						  fjs.parentNode.insertBefore(js, fjs);
+						}(document, 'script', 'facebook-jssdk'));
+				</script>
       			<!-- Your Chat Plugin code -->
 		      <div class="fb-customerchat" 
 		      	attribution=setup_tool 
