--- a/index.html
+++ b/index.html
@@ -86,10 +86,8 @@
 				    });
 
 				    FB.CustomerChat.showDialog();
-				    FB.CustomerChat.show(shouldShowDialog: boolean);
+				    FB.CustomerChat.show(shouldShowDialog: true);
 				  };
-				  FB.CustomerChat.showDialog();
-				   FB.CustomerChat.show(shouldShowDialog: boolean);
 				  (function(d, s, id) {
 						  var js, fjs = d.getElementsByTagName(s)[0];
 						  if (d.getElementById(id)) return;
