Add hover effects

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 	</head>
 	<body>
-	    <div class="containter-fluid">
-	  		<header class="">
+	    <div class="containerr-fluid">
+	  		<header>
 		    	<nav class="navbar navbar-expand-lg">
 					<div class="container-fluid">
 					   	<a class="navbar-brand" href="#" data-page="home">
