Add hover effects

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 		
 		<script src="assets/js/particle.js"></script>
 		<script type="text/javascript">
-			particlesJS.load('particles', 'assets/particles.json', function() {
+			particlesJS.load('particles', 'assets/particlesjs-config.json', function() {
 					console.log('callback - particle.js config loaded');
 			});
 		</script>
